Add images, fonts and basic css variables

--- a/index.html
+++ b/index.html
@@ -5,30 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Roadmap</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Inter:wght@500&family=Nerko+One&family=Yellowtail&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <section class="roadmap">
       <div class="roadmap__container">
         <h1 class="roadmap__title">Roadmap</h1>
-        <p class="roadmap__undertitle">Roadmap</p>
-        <div class="roadmap slider">
-          <div class="slider__block">
-            <h2 class="slider__title">Phase 1</h2>
-            <ul class="slider__list">
-              <li class="slider__item">Special events</li>
-              <li class="slider__item">Launch social networks</li>
-              <li class="slider__item">Launch token</li>
-              <li class="slider__item">Launch token on DEX</li>
+
+        <div class="roadmap__slider">
+          <article class="roadmap__slider phase">
+            <h2 class="phase__title">Phase 1</h2>
+            <ul class="phase__list">
+              <li class="phase__item">Special events</li>
+              <li class="phase__item">Launch social networks</li>
+              <li class="phase__item">Launch token</li>
+              <li class="phase__item">Launch token on DEX</li>
             </ul>
-          </div>
-          <div class="slider__block">
-            <h2 class="slider__title">Phase 2</h2>
-            <ul class="slider__list">
-              <li class="slider__item">Launch on token CEX</li>
-              <li class="slider__item">Burn 1% PAND</li>
-              <li class="slider__item">Staking</li>
+          </article>
+
+          <article class="phase__block">
+            <h2 class="phase__title">Phase 2</h2>
+            <ul class="phase__list">
+              <li class="phase__item">Launch on token CEX</li>
+              <li class="phase__item">Burn 1% PAND</li>
+              <li class="phase__item">Staking</li>
             </ul>
-          </div>
+          </article>
         </div>
       </div>
     </section>
