Add styling and necessary functionality

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Roadmap</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -13,6 +18,7 @@
     />
 
     <link rel="stylesheet" href="./styles.css" />
+    <script src="./index.js" defer></script>
   </head>
   <body>
     <section class="roadmap">
@@ -20,7 +26,7 @@
         <h1 class="roadmap__title">Roadmap</h1>
 
         <div class="roadmap__slider">
-          <article class="roadmap__slider phase">
+          <article class="phase">
             <h2 class="phase__title">Phase 1</h2>
             <ul class="phase__list">
               <li class="phase__item">Special events</li>
@@ -29,14 +35,17 @@
               <li class="phase__item">Launch token on DEX</li>
             </ul>
           </article>
-
-          <article class="phase__block">
+          <article class="phase">
             <h2 class="phase__title">Phase 2</h2>
             <ul class="phase__list">
               <li class="phase__item">Launch on token CEX</li>
               <li class="phase__item">Burn 1% PAND</li>
               <li class="phase__item">Staking</li>
             </ul>
+          </article>
+          <article class="phase">
+            <h2 class="phase__title">Phase 3</h2>
+            <ul class="phase__list"></ul>
           </article>
         </div>
       </div>
